css/work.css
@font-face {
    font-family: YesevaOne;
    src: url("../fonts/YesevaOne-Regular.ttf");
}

body
{
    background: rgb(255,204,193);
    background: linear-gradient(144deg, rgba(255,204,193,1) 7%, rgba(219,94,95,1) 100%); 

    text-align: center;
    display: grid;
    place-items: center;

    font-family: 'Open Sans Condensed', sans-serif;
    color: #473629;
}

h2
{
    color: #473629;

    font-family: 'YesevaOne', cursive;
    font-size: 35px;
}

h3
{
    color: #473629;

    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 30px;
}

h4
{
    color: #fffbf6;

    text-transform: capitalize;

    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 30px;
}

#floatBackground
{
    background-color: #fff0e5;
    box-shadow: 9px 9px 20px #db5e5f;

    width: 90vw;
    position:static;

    margin-top: 50px;
    margin-bottom: 50px;

    border: 10px solid #fffbf6;
    border-radius: 40px;
}

/* -------------- Navigation and Hero selectors -------------- */

header
{
    margin: 0 auto;
    height: 700px;

    background-image: url("../images/nyaa.png");
    max-width: 100vw;

    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

    border-radius: 30px 30px 0 0;
}

nav
{
    display: flex;
}

.navIcon
{
    position: absolute;
    visibility:hidden;
    cursor: pointer;
}

#navigation
{

    /* ONLY SCROLLS WITHIN FLEX CONTAINER, NO POPUP BACKGROUND */

    /* position:sticky;
    top:0;
    align-self: flex-start;
    z-index: 2000;

    background-color: #ffccc1;
    border: 10px solid #fffbf6;
    border-radius: 100px; */
}

nav ul
{
    width:100%;
    background-color: #fffbf6;
    list-style: none;

    padding-top: 1rem;
    padding-bottom: 1rem;

    display: flex;
    justify-content: flex-start;
}

nav li
{
    margin-top: 1.5rem;
    margin-left: 3vw;
}

nav i
{
    margin-top: 1rem;
    margin-left: 15vw;
    color: #473629;
}

nav a
{
    letter-spacing: 3px;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 30px;
}

nav a:hover
{
text-decoration-line: underline;
}

.button
{
    background-image: url("../images/button_normal.svg");
    background-repeat: no-repeat;
    background-color: transparent;
    border-color: transparent;
    background-size: contain;
    background-position: bottom;

    display: inline-block;
    width: 233px;
    height: 78px;
    margin-left: 3vw;

    cursor: pointer;
    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 20px;
    color: #473629;

    letter-spacing: 3px;
    text-transform: uppercase;
    font-size: 30px;
}

.button :hover
{
    /* TREATS TEXT AS THE HOVER OBJECT, NOT IMAGE */

    /* background-image: url("../images/button_hover.svg");
    background-size: cover; */

}

.separator
{
    background-color: #fffbf6;
    text-align: center;
    
    display: flex;
    place-content: center;
    width: 100%;
}

/* -------------- Overview selectors -------------- */

#overview
{
    display: grid;
    grid-template-columns: 60% 40%;
    margin-bottom: 50px;
}


#leftBox
{
    text-align: left;
    margin: 2em 5vw;
    list-style: none;
}


#specs
{
    margin-left: 20vw;
}

#tools
{
    padding: 2rem;
    display: flex;
    place-content: center;
}

#tools img
{
    max-width: 100px;
    max-height: 100px;
    padding: 0.5rem;
}

.download
{
    display: flex;
    place-content: center;
}

.download button:hover
{
    text-decoration-line: underline;
}

#rightBox
{
    margin: 2em 0em;
}

#preview
{
    max-width: 80%;
}

#rightBox ul
{
    text-align: left;
    margin-left: 4vw;
}

/* -------------- Phase selectors -------------- */

.phase
{
    padding: 5rem;
}

.section
{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 5% 95%;
    grid-template-areas:
    "header image"
    "text image";
    margin: 2rem;
}

.image{
    grid-area:image;
    max-width: 80%;
    max-height: 500px;
    margin-left: 8vw;
    padding: 3rem;
}

.header
{
    grid-area: header;
    text-align: left;
    margin-left: 3vw;
}

.text
{
    grid-area: text;
    margin: 0rem 3vw;
    text-align: left;
}

#results
{
    margin: 0rem 5vw;
}

#results img
{
    max-height: 800px;
}

#results p
{
    text-align: left;
}

#results button:hover
{
    text-decoration-line: underline;
}

#postMortem
{
    margin: 0rem 5vw;
    text-align: left;
}

/* -------------- footer selectors -------------- */

.footer
{
    display: flex;
    justify-content:center;
    /* margin-left: 50px;
    margin-right: 50px; */

    color: #473629;

    font-family: 'Open Sans Condensed', sans-serif;
    font-size: 16px;
}

.footer ul
{
    list-style: none;
}

.footer li
{
    display: inline-block;
    margin: 1rem 5vw;
    position: relative;
    text-decoration-line: none;
}

.footer a

{
    text-decoration: none;
}

.footer a:hover

{
    text-decoration-line: underline;
}

.footer i
{
    color: #473629;
}


/* -------------- mobile queries -------------- */

@media screen and (max-width: 1000px) {

    h2
    {
        font-size: 35px;
    }

    h3
    {
        font-size: 30px;
    }

    h4
    {
        font-size: 30px;
    }

    /* -------------- Navigation and Hero selectors -------------- */

    nav
    {
        display: flex;
        /* GET RID OF NAV */
        visibility: hidden;
    
        background-color: #fff0e5;
        border: 10px solid #fffbf6;
        border-radius: 25px;
    }
    
    .navIcon{
        visibility: visible;
        right:10%;
        top: 10%;
        width: 20%;
    }

    #navigation
    {
        

        /* ONLY SCROLLS WITHIN FLEX CONTAINER, NO POPUP BACKGROUND */

        /* position:sticky;
        top:0;
        align-self: flex-start;
        z-index: 2000;

        background-color: #ffccc1;
        border: 10px solid #fffbf6;
        border-radius: 100px; */
    }

    nav ul
    {
        /* OPEN DRAWER */
        width: 100%;
        flex-direction: column;
        place-items: center;
        background-color: unset;
    }

    nav li
    {
        /* OPEN DRAWER */
        margin-top: 4rem;
    }

    nav i
    {
        /* OPEN DRAWER */
        margin-top: 5rem;
        margin-left: 0;
    }

    nav a
    {
        /* OPEN DRAWER */
        letter-spacing: 3px;
        font-size: 30px;
    }
    
    .button
    {
        /* OPEN DRAWER */
        display: inline-block;
        width: 233px;
        height: 78px;
        margin-top: 4rem;

        font-size: 20px;

        letter-spacing: 3px;
        font-size: 30px;
    }

    /* -------------- Overview selectors -------------- */

    #overview
    {
        display: block;
    }


    #leftBox
    {
        margin: 0;
    }


    #specs
    {
        margin: 0;
        padding: 2rem;
    }

    #tools
    {
        flex-flow: wrap;
        padding: 1rem;
    }

    #tools img
    {
        max-width: 150px;
        max-height: 150px;
    }

    .download
    {
        place-self: center;
    }

    #rightBox
    {
        margin: 0em;
        padding:2rem;
    }

    #preview
    {
        max-width: 100%;
    }

    #rightBox ul
    {
        text-align: left;
        margin-left: 6vw;
    }

    /* -------------- Phase selectors -------------- */

    .phase
    {
        padding: 0;
    }

    .section
    {
        display: grid;
        grid-template-columns: unset;
        grid-template-rows: unset;
        grid-template-areas:
        "header"
        "image"
        "text";
        margin: 2rem;
        padding-bottom: 2rem;
    }

    .image{
        max-width: 100%;
        max-height: unset;
        margin-left: 0vw;
        justify-self: center;
    }

    .header
    {
        margin-left: 5vw;
    }

    .text
    {
        margin: 2rem 5vw;
    }

    #results
    {
        margin: 0 5vw;
        padding-bottom: 5rem;
    }

    #results img
    {
        max-height: unset;
        width: 100%;
        justify-self: center;
    }


    /* -------------- footer selectors -------------- */

    .footer
    {
        display: flex;
        justify-content:center;

        font-size: 16px;
    }

    .footer li
    {
        visibility: hidden;
    }

    .footer i
    {
        /* MAKE LARGER */
    }


}

